# DavOS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ConfigLists.py  README.md  configure
.github/workflows/: main.yml
arch/: CMakeLists.txt  ConfigLists.py
arch/bridge/: CMakeLists.txt  kout.cc
arch/bridge/boot/: setup.cc
arch/include/arch/: boot_info.h  kout.h
arch/include/arch/boot/: setup.h
arch/x86/: CMakeLists.txt  ConfigLists.py  cpuid.c  cpuid.cc  entry.S  init.c  linker.ld  page_map.cc  vga_text.c  vga_text.cc
arch/x86/boot/: CMakeLists.txt
arch/x86/boot/multiboot2/: CMakeLists.txt  entry.S  entry.cc  linker.ld  multiboot_info.cc  setup.cc
arch/x86/entry/: CMakeLists.txt  gdt.cc  gdt.h  i386_entry.cc  x86_64_entry.cc
arch/x86/i386/: CMakeLists.txt  entry.S  entry.cc  gdt.cc  gdt.h  init.c  init.cc  ldconfig.S  linker.ld  linker_i386.ld
arch/x86/include/arch/: config.h.in  vga_text.h
arch/x86/include/x86/: addressing.h  config.h.in  cpuid.h  cr.h  kout.h  ldsym.h  paging.h  system.h  vga_text.h
arch/x86/include/x86/boot/: setup.h
arch/x86/include/x86/boot/multiboot2/: multiboot_info.h
arch/x86/include/x86/entry/: i386_entry.h  x86_64_entry.h
arch/x86/include/x86/i386/: entry.h
arch/x86/include/x86/paging/: control.h  page_map.h  page_map_level_2.h  page_map_level_3_PAE.h  page_map_level_4_5.h  page_table_entry.h  page_table_level_4.h
arch/x86/include/x86/utils/vga/: console.h  ostream.h  text_mode.h
arch/x86/scripts/: dump_sections_i386.sh  section_memlayout.S
arch/x86/utils/: CMakeLists.txt
arch/x86/utils/vga/: CMakeLists.txt  console.cc  ostream.cc  text_mode.cc
arch/x86_64/boot/: entry.S
boot/: CMakeLists.txt
boot/grub/: CMakeLists.txt  grub.cfg
cmake/: DeclareConfig.cmake  LinkElfImage.cmake  NullFile.cmake  SwitchMode.cmake
include/: compiler_attributes.h  config.h.in  kernel_image.h  kernel_section.h  kernel_segment.h  ldconfig.h  ldsym.h  stdbool.h  stddef.h  stdint.h  string.h
include/kstd/: algorithm.h  array.h  concepts.h  either.h  enum.h  io.h  limits.h  maybe.h  memory.h  new.h  overflow.h  section.h  type_traits.h  utility.h
include/ld/: ldsym.h  section.h  segment.h
kernel/: CMakeLists.txt  main.c  main.cc  runtime.cc
kernel/include/kernel/: kout.h  mem_layout.h  runtime.h
klibc/: CMakeLists.txt  string.cc
klibc/include/: ctype.h  string.h
scripts/config/: __main__.py  cmake.py  config.py  format.py  manager.py
scripts/dump_sections/: main.sh  section_memlayout.S
targets/: CMakeLists.txt
targets/x86/: CMakeLists.txt
targets/x86/multiboot2/: CMakeLists.txt  entry.ld.in  entry_common_ldsym.ld.h  i386.linker.ld.in  i386_entry.ld.in  kernel.ld.in  kernel_i386.ld.in  linker.ld  linker.ld.in  sections.h  segments.h
test/: CMakeLists.txt
tools/config/: __main__.py  cmake.py  config.py  format.py  manager.py  parser.py  utils.py
tools/config/lib/: config.py  parser.py  utils.py
