if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86
 OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL x86_64)
    set(ARCH_DIR x86)
endif()

set(KERNEL_DIR ${CMAKE_CURRENT_BINARY_DIR}/${ARCH_DIR}/boot)
set(KERNEL_PATH ${KERNEL_DIR}/kernel)

set(KERNEL_DIR ${KERNEL_DIR} PARENT_SCOPE)
set(KERNEL_PATH ${KERNEL_PATH} PARENT_SCOPE)

add_subdirectory(${ARCH_DIR})
